# ai_interviewer

./: IOS_DEVELOPMENT_GUIDE.md  README.md  README_DEBUG.md  main.py  pyproject.toml  run_debug.py  test_interview.py
api/: interviewer.py  router.py
core/: __init__.py  config.py  embeddings.py
schemas/: chat.py
services/: __init__.py  database.py  interview_service.py  interview_session.py  question_bank.py  resume_parser.py
storage/database/: interviews.db
storage/vector_db/: chroma.sqlite3
