[project]
name = "ai-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "langchain>=0.2.16",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.17",
    "langchain-chroma>=0.1.3",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=5.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "dashscope>=1.17.0",
]
